--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>Site criado por Alexandre Z. Z. Rocha</p>
     </footer>
 
-    <!--<script>
+    <script>
         var nome = "";
     
         while (nome === null || nome.trim() === "") {
@@ -62,6 +62,6 @@
         // Após obter um nome válido, atualize o conteúdo do elemento <h1>
         var h1Element = document.querySelector("header p");
         h1Element.innerHTML = h1Element.innerHTML + " <strong>" + nome + "</strong>";
-    </script> -->
+    </script>
 </body>
 </html>
